--- a/sbin/bioctl/bioctl.8
+++ b/sbin/bioctl/bioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/bioctl/bioctl.8,v 1.47 2007/06/04 11:26:53 jmc Exp $
+.\"	$OpenBSD: src/sbin/bioctl/bioctl.8,v 1.48 2007/07/10 15:46:54 henning Exp $
 .\"
 .\" Copyright (c) 2004, 2005 Marco Peereboom
 .\"
@@ -32,7 +32,7 @@
 .Sh SYNOPSIS
 .Nm bioctl
 .Bk -words
-.Op Fl hiv
+.Op Fl hiqv
 .Op Fl a Ar alarm-function
 .Op Fl b Ar channel:target[.lun]
 .Op Fl C Ar flag[,flag,...]
@@ -131,6 +131,8 @@ to cease blinking, if there is
 or
 .Xr safte 4
 support in the enclosure.
+.It Fl q
+Show vendor, product, revision and serial number for the given disk.
 .It Fl v
 Be more verbose in output.
 .It Ar device
