--- a/sbin/bioctl/bioctl.8
+++ b/sbin/bioctl/bioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/bioctl/bioctl.8,v 1.48 2007/07/10 15:46:54 henning Exp $
+.\"	$OpenBSD: src/sbin/bioctl/bioctl.8,v 1.49 2007/07/11 07:40:11 jmc Exp $
 .\"
 .\" Copyright (c) 2004, 2005 Marco Peereboom
 .\"
@@ -123,6 +123,8 @@ device list to create within the
 framework.
 Requires
 .Fl c .
+.It Fl q
+Show vendor, product, revision, and serial number for the given disk.
 .It Fl u Ar channel:target[.lun]
 Instruct the device at
 .Ar channel:target[.lun]
@@ -131,8 +133,6 @@ to cease blinking, if there is
 or
 .Xr safte 4
 support in the enclosure.
-.It Fl q
-Show vendor, product, revision and serial number for the given disk.
 .It Fl v
 Be more verbose in output.
 .It Ar device
